src/test/ui/unboxed-closures/unboxed-closure-sugar-wrong-trait.stderr
error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/unboxed-closure-sugar-wrong-trait.rs:5:13
   |
LL | fn f<F:Trait(isize) -> isize>(x: F) {}
   |             ^^^^^^^ unexpected type argument

error[E0220]: associated type `Output` not found for `Trait`
  --> $DIR/unboxed-closure-sugar-wrong-trait.rs:5:24
   |
LL | fn f<F:Trait(isize) -> isize>(x: F) {}
   |                        ^^^^^ associated type `Output` not found

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0220.
For more information about an error, try `rustc --explain E0107`.
